--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -377,6 +377,23 @@ input#openid_url {
   background: white url(/images/openid.gif) no-repeat scroll 0pt 50%;
   padding-left: 18px; }
 
+body.public {
+  background-color: #E5E5E5; }
+  body.public .container {
+    border: 10px solid #CCCCCC;
+    width: 470px; }
+    body.public .container #hd {
+      background-image: none; }
+      body.public .container #hd #logo {
+        background-image: none;
+        border-bottom: none; }
+    body.public .container #bd {
+      background-color: #FFFFFF;
+      padding-top: 15px;
+      padding-bottom: 5px;
+      padding-left: 20px;
+      padding-right: 20px; }
+
 .clear {
   clear: both; }
   .clear hr {
