--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -430,7 +430,7 @@ h3
         :text-align center
         :background-color #EEEEEE
       
-      .role
+      .login, .role
         :float right
       
       .name
