--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -473,6 +473,9 @@ h3
         :font-weight bold
 
     #opponents
+      h3
+        :margin-top 1.5em
+    
       .odd
         :background-color #F0F0F0
 
