--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -6,7 +6,7 @@
       .user
         .image
           - if user.mugshot
-            = image_tag user.mugshot.public_filename(:thumb), :alt => h(user.name)
+            = link_to image_tag(user.mugshot.public_filename(:thumb), :alt => h(user.name)), user_path(user)
         .login= user.login
         .name= user.name
         .role= user.is_admin? ? 'Admin'[] : 'Normal'[]
