--- a/app/views/comments/_show.html.haml
+++ b/app/views/comments/_show.html.haml
@@ -1,3 +1,4 @@
-.body= simple_format(h(comment.body.strip))
-- if comment.user_id == current_user.id
-  .edit= link_to_remote 'Edit', :update => "content_#{comment.id}", :url => edit_game_comment_path(comment.game, comment)
+%a{ :name => "c#{comment.id}" }
+  .body= simple_format(h(comment.body.strip))
+  - if comment.user_id == current_user.id
+    .edit= link_to_remote 'Edit', :update => "content_#{comment.id}", :url => edit_game_comment_path(comment.game, comment)
