Use the already loaded list of users more

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -40,20 +40,20 @@
               = link_to @all_time_high.current_ranking, game_path(@all_time_high.team.game), :class => 'game'
               = 'by'[]
               %br
-              = user_link_full @all_time_high.user
+              = user_link_full find_user(@all_time_high.user_id)
           %td
             - unless @all_time_low.nil?
               %label= 'All time low'[] + ':'
               = link_to @all_time_low.current_ranking, game_path(@all_time_low.team.game), :class => 'game'
               = 'by'[]
               %br
-              = user_link_full @all_time_low.user   
-         
+              = user_link_full find_user(@all_time_low.user_id)
+
   - if @comments && @comments.size > 0
     #recent_comments
       %h3= 'Recent comments'[]
      
       - @comments.each do |comment|
         .comment
-          .user= comment.user.name
+          .user= find_user(comment.user_id).name
           .body= link_to h(truncate(comment.body.strip, 40)), game_path(comment.game_id, :anchor => "c#{comment.id}")
