Removed hover underline on comment content

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -248,6 +248,9 @@ h3
       :border-bottom 1px solid #CCCCCC
       :padding-bottom 0
       
+      a:hover
+        :text-decoration none
+      
       p
         :margin-bottom 1em
     
