--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -2,7 +2,10 @@
 
 #graph
   %h3= 'Ranking chart for {first_name} and {second_name}'[:ranking_chart_for, h(@team_members.first.name), h(@team_members.last.name)]
-  = graph(formatted_team_url(params[:id], :graph))
+  - form_tag team_path(@ids.join(',')), :method => :get do
+    = select_tag('period', options_for_select(time_periods, @time_period))
+    = submit_tag 'Update'[]
+  = graph(formatted_team_url(params[:id], :graph, :period => @time_period))
 
 - content_for :sidebar do
   %h3= 'Team members'[]
