--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -345,9 +345,6 @@ h3 {
     #sidebar .content #leader h3 {
       padding: 0;
       margin: 0; }
-  #sidebar .content #counts label {
-    display: block;
-    font-weight: bold; }
   #sidebar .content #opponents h3 {
     margin-top: 1.5em; }
   #sidebar .content #opponents .odd {
@@ -365,6 +362,22 @@ h3 {
       margin-bottom: 1em; }
       #sidebar .content #recent_comments .comment .user {
         font-weight: bold; }
+  #sidebar .content .user .gamelink, #sidebar .content .team .gamelink {
+    margin-top: 1.5em; }
+    #sidebar .content .user .gamelink a, #sidebar .content .team .gamelink a {
+      text-decoration: none; }
+      #sidebar .content .user .gamelink a img, #sidebar .content .team .gamelink a img {
+        vertical-align: text-bottom; }
+  #sidebar .content .user #counts, #sidebar .content .team #counts {
+    margin-top: 1.5em; }
+    #sidebar .content .user #counts label, #sidebar .content .team #counts label {
+      display: block;
+      font-weight: bold; }
+  #sidebar .content .team .mugshot {
+    width: 109px;
+    float: left; }
+    #sidebar .content .team .mugshot a {
+      display: block; }
   #sidebar .content table {
     width: 100%; }
 
