Fix "goals scored" counter

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -7,5 +7,4 @@
   Create a new account
   
 %p
-  To create a new account, fill out
-  = link_to 'this form', new_account_path
+  = 'To create a new account, fill out <a href="{new_account_url}">this form</a>.'[:to_create_an_account, new_account_path]
