Remove underline on a:hover in the menu

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -56,6 +56,8 @@ textarea {
 
 #menu {
   background-color: #77BBDD; }
+  #menu a:hover {
+    text-decoration: none; }
   #menu #add_game {
     text-align: right; }
     #menu #add_game a {
