--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -12,7 +12,7 @@
     = stylesheet_link_tag 'print', :media => 'print'
     /[if IE]
       = stylesheet_link_tag 'lib/ie', :media => 'screen, projection'
-    = javascript_include_tag :defaults
+    = javascript_include_tag :defaults, :cache => true
     = yield :head
 
   %body.public
