--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,8 @@
     = stylesheet_link_tag 'print', :media => 'print'
     /[if IE]
       = stylesheet_link_tag 'lib/ie', :media => 'screen, projection'
-    = javascript_include_merged :base
+    = javascript_include_tag :defaults
+    = javascript_include_tag 'swfobject'
     = yield :head
 
   %body
