--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -324,6 +324,8 @@ h3 {
 #sidebar input {
   display: block;
   width: 200px; }
+#sidebar label {
+  display: block; }
 #sidebar .content {
   padding-top: 1.5em;
   padding-left: 1em;
