Small style nitpicking

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -33,21 +33,22 @@
           %td
             %label= 'Goals scored'[] + ':'
             = @goals_scored
-        %tr
-          %td
-            - unless @all_time_high.nil?
-              %label= 'All time high'[] + ':'
-              = link_to @all_time_high.current_ranking, game_path(@all_time_high.team.game), :class => 'game'
-              = 'by'[]
-              %br
-              = user_link_full find_user(@all_time_high.user_id)
-          %td
-            - unless @all_time_low.nil?
-              %label= 'All time low'[] + ':'
-              = link_to @all_time_low.current_ranking, game_path(@all_time_low.team.game), :class => 'game'
-              = 'by'[]
-              %br
-              = user_link_full find_user(@all_time_low.user_id)
+        - unless @all_time_high.nil? && @all_time_low.nil?
+          %tr
+            %td
+              - unless @all_time_high.nil?
+                %label= 'All time high'[] + ':'
+                = link_to @all_time_high.current_ranking, game_path(@all_time_high.team.game), :class => 'game'
+                = 'by'[]
+                %br
+                = user_link_full find_user(@all_time_high.user_id)
+            %td
+              - unless @all_time_low.nil?
+                %label= 'All time low'[] + ':'
+                = link_to @all_time_low.current_ranking, game_path(@all_time_low.team.game), :class => 'game'
+                = 'by'[]
+                %br
+                = user_link_full find_user(@all_time_low.user_id)
 
   - if @comments && @comments.size > 0
     #recent_comments
