Add Google Analytics js

--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -49,3 +49,5 @@
           = link_to 'Project home'[], 'http://code.google.com/p/scorekeeper/', :target => '_blank'
           = '&middot;'
           = link_to 'Report issue'[], 'http://code.google.com/p/scorekeeper/issues/entry', :target => '_blank'
+
+    = render :partial => 'shared/google_analytics'
